<resources>
    <string name="app_name">CalculatorApplication</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="expect">EXPECT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="subtract">SUBTRACT</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">ADD</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equal">EQUAL</string>
    <string name="_0">0</string>
    <string name="invisible">invisible</string>
    <string name="point">POINT</string>
    <string name="apoint">.</string>
    <string name="aequal">=</string>
    <string name="aadd">+</string>
    <string name="asubtract">-</string>
    <string name="aexpect">/</string>
    <string name="amultiply">*</string>
</resources>